# SingleLadderQualification

./: #main_threshold_v1.cpp#  .clang-format  .cproject  .format-check.sh  .format-check.sh.orig  .format.sh  .format.sh.orig  .gitignore  .gitlab-ci.yml  .pre-commit-clang-format  .project  AlpideConfig.cpp  AlpideConfig.h  AlpideDebug.cpp  AlpideDebug.h  AlpideDecoder.cpp  AlpideDecoder.h  BoardDecoder.cpp  BoardDecoder.h  CMakeLists.txt  CMakeMigration.md  Common.cpp  Common.h  Config.cfg  ConfigTemplate.cfg  Config_OB-HIC_TabCutted.cfg  Config_To_HS.cfg  Config_template.cfg  Config_template_pulselength.cfg  Config_test.cfg  Debug.md  GetBackBias  Makefile  README.md  ScanExample.C  SetupHelpers.cpp  SetupHelpers.h  TAlpide.cpp  TAlpide.h  TAlpide_conflict-20160718-153842.h  (+138 more)
DBParameter/: CMakeLists.txt  itsdb.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
DataBaseSrc/: AlpideDB.cpp  AlpideDB.h  AlpideDBEndPoints.cpp  AlpideDBEndPoints.h  AlpideDBManager.cpp  AlpideDBManager.h  CMakeLists.txt  CernSsoCookiesJar.cpp  CernSsoCookiesJar.h  DBHelpers.cpp  DBHelpers.h  DBQueryQue.cpp  DBQueryQue.h  InstallationReadMe  Makefile  cJSON.c  cJSON.h  main.cpp  makefile  utilities.cpp  utilities.h
GUI/: .gitignore  CMakeLists.txt  ConfigPower.cfg  Debug.txt  GUI.pro  PBBottomCalib.cfg  activitystatus.cpp  activitystatus.h  activitystatus.ui  calibrationpb.cpp  calibrationpb.h  calibrationpb.ui  checkpbconfig.cpp  checkpbconfig.h  checkpbconfig.ui  components.cpp  components.h  components.ui  databasefailure.cpp  databasefailure.h  databasefailure.ui  databaseselection.cpp  databaseselection.h  databaseselection.ui  dbnotice.cpp  dbnotice.h  dbnotice.ui  debugwindow.cpp  debugwindow.h  debugwindow.ui  dialog.cpp  dialog.h  dialog.ui  env.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.orig  mainwindowa.cpp  (+18 more)
MosaicSrc/libmosaic/: CMakeLists.txt  Makefile
MosaicSrc/libmosaic/include/: genconsumer.h  i2cbus.h  i2cslave.h  i2csyspll.h  ipbus.h  ipbusudp.h  mboard.h  mcoordinator.h  mdatagenerator.h  mdatareceiver.h  mdatasave.h  mexception.h  mruncontrol.h  mservice.h  mtriggercontrol.h  mwbb.h  mwbbslave.h  pulser.h  trgrecorder.h  wishbonebus.h
MosaicSrc/libmosaic/src/: genconsumer.cpp  i2cbus.cpp  i2cslave.cpp  i2csyspll.cpp  ipbus.cpp  ipbusudp.cpp  mboard.cpp  mcoordinator.cpp  mdatagenerator.cpp  mdatareceiver.cpp  mdatasave.cpp  mexception.cpp  mruncontrol.cpp  mservice.cpp  mtriggercontrol.cpp  mwbbslave.cpp  pulser.cpp  trgrecorder.cpp
MosaicSrc/libpowerboard/: CMakeLists.txt  Makefile
MosaicSrc/libpowerboard/include/: ADC128D818.h  ad5254.h  ad7997.h  ltc2635.h  (+5 more)
TestDataExplorer/: CMakeLists.txt  ScanData.cpp  ScanData.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
analysis/: All_FitThresholdTuneIB.C  All_FitThresholdVCASNIB.C  All_FitThresholds.C  All_FitThresholdsIB.C  All_ThresholdMap.C  CMakeLists.txt  DigitalscanOB.C  FitThresholdTune.C  FitThresholdTune.h  FitThresholdTuneVCASNIB.C  FitThresholds.C  FitThresholds.h  Hitmap.C  HitmapGUI.C  HitmapIB.C  HitmapOB.C  HitmapOB_gaus.C  HitmapOB_mask.C  HitmapOB_susp.C  ITHRDistributionGUI.C  NoiseOccupancyRawToHisto.C  OB_Test_Histo.C  OB_mask_maker.C  PlotCalibrationResults.C  PlotCompareThresholds.C  PulseshapeAnalysis.C  PulseshapeRawToHisto.C  Temp_test.C  ThresholdDistributionGUI.C  ThresholdMap.C  ThresholdMapIB.C  ThresholdRawToHisto.C  VCASNDistributionGUI.C  analyse_supply_voltage.C  analyse_threshold_data.sh  analyze_pulseshape_scans.sh  helpers.cpp  helpers.h  na61_align.sh  na61_analysis.sh  (+16 more)
analysis/IBstaveStudies/: analyse_AVDD.C  analyse_DAC.C  run_DAC_analysis.sh  run_ground_offset_analysis.sh
analysis/classes/: AliALPIDEModuleStreamMS.cpp  AliALPIDEModuleStreamMS.hpp  AliPALPIDEFSRawStreamMS.cpp  AliPALPIDEFSRawStreamMS.h  Alignment.cpp  Alignment.hpp  BinaryCluster.cpp  BinaryCluster.hpp  BinaryEvent.cpp  BinaryPixel.cpp  BinaryPlane.cpp  BinaryPlane.hpp  compile_classes.C  helpers.cpp  helpers.h  load_classes.C
analysis/clustering/: analysis_basic.C  analysis_basic_hic.C  analysis_chip7.C  analysis_ibhic.C  create_masks_from_noiseocc_hic.C  csa.C  csa_hic.C  interesting_events.C  interesting_events_hic.C  show_all_chips.C  x_csa.C
analysis/monitoring/: README  monitoring_IBHIC.C  monitoring_IBHICw.C  monitoring_main.C  monitoring_palpidefs.C  monitoring_palpidefs_C.d  run_monitoring.sh
analysis/na61/: Na61Analysis.cpp  Na61Analysis.hpp  alignment_vd.C  correlation_psd.C  correlation_psd_hic.C  main_Na61Analysis.C  prealignment_vd.C
exe/: CMakeLists.txt  README.md  main_DBCheck.cpp  main_DBQueryProducer.cpp  main_DBQueueConsumer.cpp  main_GRST.cpp  main_ITHRthreshold.cpp  main_VCASNthreshold.cpp  main_alucms.cpp  main_chip_count.cpp  main_dacscan.cpp  main_dacscan_voltage.cpp  main_datatofile.cpp  main_digitalscan.cpp  main_dumpreg.cpp  main_eyescan.cpp  main_fifo.cpp  main_gbtdebug.cpp  main_localbus.cpp  main_mosaic.cpp  main_noiseocc.cpp  main_noiseocc_ext.cpp  main_pllinit.cpp  main_plot_eyes.cpp  main_powerdown_analogue.cpp  main_poweron.cpp  main_prbs.cpp  main_pulselength.cpp  main_readoutunit.cpp  main_roottest.cpp  main_scan.cpp  main_scantest.cpp  main_scantest_digital.cpp  main_scantest_threshold.cpp  main_scope.cpp  main_slowscan.cpp  main_source.cpp  main_startclk.cpp  main_stopclk.cpp  main_supply_voltage.cpp  (+10 more)
libalpide/: CMakeLists.txt
scripts/: CMakeLists.txt  disable_chip.sh  edit_ipaddress.sh  enable_chip.sh  mft_data_transfer.sh  packaging_script.sh  rate_dependence.sh  renew_kerberos.py  run_backbias_threshold.sh  run_irrad_chip_test.sh  run_pulseshape_scan_vcasn.sh  run_pulseshape_scan_vcasn_single.sh  run_supply_voltage_dependence.sh  test_power_up.sh
scripts/ADC_study/: powerOff.sh  powerOn.sh  run_ground_offset.sh
scripts/IBstaveStudies/: HP_E3631A.py  hameg.py  run_ground_offset.sh
scripts/common/: hameg2030.py  hameg_module_test.py  powerON.py
scripts/powerOnTest_Stave/: powerOnTest_Stave.sh  powerOnTest_Stave_digital_first.sh
scripts/stave_test/: HP_E3631A.py  hameg.py  huber.py  powerOff.sh  powerOn.sh
(+354 files in other folders)
